# Dotnet.DeepSigma.PythonService

./: .gitignore  NuGet.config  README.md
DeepSigma.PythonService/: DeepSigma.PythonService.Client.csproj  DeepSigma.PythonService.slnx  HealthClient.cs  PythonApiResource.cs  PythonServiceBuilder.cs  PythonServiceClient.cs  PythonServiceOptions.cs  ServiceCollectionExtensions.cs
DeepSigma.PythonService.AppHost/: AppHost.cs  DeepSigma.PythonService.AppHost.csproj
DeepSigma.PythonService.AppHost/Properties/: launchSettings.json
DeepSigma.PythonService.Demo/: ConsolePresentationUtilities.cs  DeepSigma.PythonService.Demo.csproj  DemoEchoClient.cs  DemoIrisClient.cs  Program.cs
DeepSigma.PythonService.Demo/Models/: Echo.cs  Iris.cs
DeepSigma.PythonService.Test/: DeepSigma.PythonService.Test.csproj  PythonServiceClientTests.cs
DeepSigma.PythonService/Models/: HealthResponse.cs
python/: .dockerignore  Dockerfile  Dotnet.DeepSigma.PythonService.pyproj  README.md  pyproject.toml  requirements.txt  server.py
python/implementations/: echo.py  ml_iris.py
python/src/deepsigma_pyservice/: app_factory.py  settings.py
python/src/deepsigma_pyservice/routers/: health.py
python/tests/: conftest.py  test_echo.py  test_health.py  test_iris.py
