[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deepsigma-pyservice"
version = "0.1.0"
description = "Reusable FastAPI framework for exposing Python functions to .NET callers."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
examples = [
    "scikit-learn>=1.5",
    "numpy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
